Endpoint for getting users votes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
           go build -ldflags="-s -w" -o bin/deregisterDevice   rest/device/deregisterDevice/main.go
 
           go build -ldflags="-s -w" -o bin/getUser            rest/user/getUser/main.go
+          go build -ldflags="-s -w" -o bin/getUsersVotes      rest/user/getUsersVotes/main.go
           go build -ldflags="-s -w" -o bin/updateUser         rest/user/updateUser/main.go
           go build -ldflags="-s -w" -o bin/getAvatarURL       rest/user/getAvatarURL/main.go
 
