Store played songIDs in a list and provide a paginated endpoint for them.

--- a/serverless.yml
+++ b/serverless.yml
@@ -868,6 +868,11 @@ functions:
       - http:
           path: songs/played
           method: get
+          request:
+            parameters:
+              querystrings:
+                startIndex: true
+                numItems: true
           authorizer:
             name: authorizer
             resultTtlInSeconds: 0
